# mcculloch-pitts-neuron

./: README.md  pyproject.toml
src/: input.py  input_type.py  logic_gates.py  mcp_neuron.py
tests/: neuron_test.py
