[tool.poetry]
name = "mcculloch-pitts-neuron"
version = "0.1.0"
description = ""
authors = ["Kais Dukes <dukeskais79@gmail.com>"]
readme = "README.md"
packages = [{include = "mcculloch_pitts_neuron"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
